<resources>
    <string name="app_name">Senders</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome_to_senders">Welcome to senders</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="login_with_google">Login with google</string>
    <string name="loading">loading</string>
    <string name="start">Start</string>
    <string name="title_activity_chat" translatable="false">Chat</string>
    <string name="add">add</string>
    <string name="dsi32" translatable="false">DSI32</string>
    <string name="dsi31" translatable="false">dsi31</string>
    <string name="write_a_message">Write a message</string>
    <string name="home">home</string>
    <string name="rooms">rooms</string>
    <string name="back">back</string>
    <string name="select_your_class_room">Select your class room :</string>
</resources>
