<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7B1FA2"
    tools:context=".GoogleSignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/applog" />

            <TextView
                android:id="@+id/welcom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/welcome_to_senders"
                android:textColor="#FFFEFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-smallcaps" />

            <Button
                android:id="@+id/LogInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:drawableStart="@drawable/googleg_standard_color_18"
                android:drawableLeft="@drawable/googleg_standard_color_18"
                android:text="@string/login_with_google" />

            <Button
                android:id="@+id/SignOutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:drawableStart="@drawable/googleg_standard_color_18"
                android:drawableLeft="@drawable/googleg_standard_color_18"
                android:text="@string/sign_out"
                android:visibility="gone" />

            <Button
                android:id="@+id/StartBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:text="@string/start"
                android:textColor="#7B1FA2"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>