<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8E24AA"
    tools:context=".RoomsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_your_class_room"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dsi32Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:text="@string/dsi32" />

        <Button
            android:id="@+id/dsi31Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:text="@string/dsi31" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>